# dhs

./: CLAUDE.md  PROMPT.md  pyproject.toml
.github/workflows/: build-push.yml
apps/dhs/: config.py  evaluator.py  event_enricher.py  kafka_emitter.py  main.py  prom_client.py  requirements.txt  root_cause.py  rule_loader.py  ssot_client.py  state_engine.py
documentation/contracts/: HEALTH_STATES.md  KAFKA_EVENTS.md
documentation/progress/: ARCHITECTURE_DESIRED.md
documentation/sprint/: ROADMAP.md
documentation/sprint/sprint1/: PLAN.md  REVIEW.md
documentation/sprint/sprint2/: PLAN.md  REVIEW.md
documentation/sprint/sprint3/: PLAN.md  PROMPT.md  REVIEW.md
documentation/sprint/sprint4/: PLAN.md  REVIEW.md  RUNBOOK.md
documentation/sprint/sprint5/: PLAN.md
k8s/: namespace.yaml
k8s/dhs/: configmap-rules.yaml  deployment.yaml  service.yaml
rules/: database.yaml  deployment.yaml  kafka.yaml  node.yaml  service-api.yaml  service-worker.yaml
tests/: requirements.txt
tests/e2e/: conftest.py  test_evaluator.py  test_failure_scenarios.py  test_root_cause.py  test_transitions.py
tests/unit/: conftest.py  test_evaluator_logic.py  test_rule_loader.py  test_state_engine.py
